--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "@types/react": "^17.0.5",
     "@types/react-native": "^0.64.5",
     "@types/react-test-renderer": "^17.0.1",
-    "babel-jest": "^26.6.3",
-    "eslint": "7.14.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.64.0",
+    "babel-jest": "^27.0.1",
+    "eslint": "^7.27.0",
+    "jest": "^27.0.1",
+    "metro-react-native-babel-preset": "^0.66.0",
     "react-test-renderer": "17.0.1",
     "typescript": "^4.2.4"
   },
