--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "postinstall": "pod install --project-directory=ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
     "@nemosity/react-formulate": "^0.0.1-alpha.5",
@@ -17,8 +17,8 @@
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
-    "react": "17.0.1",
-    "react-native": "0.64.1",
+    "react": "17.0.2",
+    "react-native": "0.68.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
@@ -34,17 +34,29 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
-    "@types/react": "^17.0.5",
-    "@types/react-native": "^0.64.5",
+    "@types/react-native": "^0.67.3",
     "@types/react-test-renderer": "^17.0.1",
-    "babel-jest": "^27.0.1",
-    "eslint": "^7.27.0",
-    "jest": "^27.0.1",
-    "metro-react-native-babel-preset": "^0.66.0",
-    "react-test-renderer": "17.0.1",
-    "typescript": "^4.2.4"
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
+    "babel-jest": "^26.6.3",
+    "eslint": "^7.32.0",
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.67.0",
+    "react-test-renderer": "17.0.2",
+    "typescript": "^4.4.4"
+  },
+  "resolutions": {
+    "@types/react": "^17"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   }
 }
